refactor(projectview): 重构归档树结构提供者实现
- 替换 ArchiveEntryTreeNode 中返回空列表方式为 Collections.emptyList()
- 引入 ArchiveFormatProvider 接口，支持多种归档格式扩展
- 实现 ArchiveFormatRegistry 管理所有归档格式提供者
- 新增 ZipArchiveFormatProvider，支持 zip/jar 格式归档处理
- 添加 NestedArchiveCacheService 解决多层嵌套归档的缓存及本地化问题
- 修改 ArchiveTreeStructureProvider 使用新注册机制和缓存服务构建节点
- 增加异步异常捕获与日志记录，提升归档节点构建健壮性
- 新增 ArchiverFeatureToggles 控制项目视图归档浏览功能的开关
- 插件配置中注册 NestedArchiveCacheService 服务
- 更新.gitignore，调整忽略文件配置